# shopify-webhook-parser-lib

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
shopifywebhookparser/: __init__.py  __init__.pyi  models.py  models.pyi  parsing.py  parsing.pyi
tests/: test_parsing.py
