[tool.poetry]
name = "shopify-webhook-parser-lib"
version = "0.1.14"
description = "A Python module to parse Shopify webhook requests, tailored for Azure Functions."
authors = ["Zin Yosrim <zinyosrim@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zinyosrim/shopify-webhook-parser-lib"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "shopifywebhookparser"}]

[tool.poetry.dependencies]
python = "^3.9"
azure-functions = "^1.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
